@@ -42,6 +42,12 @@
 #include "winconfig.h"
 #include "winmsg.h"
 
+#ifdef XKB
+extern BOOL winCheckKeyPressed(WPARAM wParam, LPARAM lParam);
+#endif
+extern void winFixShiftKeys (int iScanCode);
+
+
 /*
  * Global variables
  */
@@ -1014,11 +1020,22 @@ winWindowProc (HWND hwnd, UINT message,
        * Discard presses generated from Windows auto-repeat
        * ago: Only discard them if XKB is not disabled 
        */
-      if (!g_winInfo.xkb.disable) 
-        {  
-          if (lParam & (1<<30))
-	    return 0;
-        } 
+      if (!g_winInfo.xkb.disable && (lParam & (1<<30)))
+      {
+        switch (wParam)
+        {
+          /* ago: Pressing LControl while RControl is pressed is 
+           * Indicated as repeat. Fix this!
+           */
+          case VK_CONTROL:
+          case VK_SHIFT:
+            if (winCheckKeyPressed(wParam, lParam))
+              return 0;
+            break;
+          default:
+            return 0;
+        }
+      } 
 #endif 
       
       /* Discard fake Ctrl_L presses that precede AltGR on non-US keyboards */
@@ -1057,6 +1074,10 @@ winWindowProc (HWND hwnd, UINT message,
       /* Enqueue a keyup event */
       winTranslateKey (wParam, lParam, &iScanCode);
       winSendKeyEvent (iScanCode, FALSE);
+
+      /* Release all pressed shift keys */
+      if (wParam == VK_SHIFT) 
+        winFixShiftKeys (iScanCode);
       return 0;
 
     case WM_HOTKEY:
